--- a/recipes/asada.html
+++ b/recipes/asada.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Carne Asada</title>
 </head>
 <body>
-    
+    <h1>Carne Asada</h1>
+    <img src="../images/asada.jpg">
+    <h3>Description</h3>
+    <p>Marinated Carne Asada that's grilled alongside charred tortaillas and vegetables.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li></li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <ul></ul>
+    </ol>
 </body>
 </html>
