--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/Stroganoff.html">Beef Stroganoff</a>
-    <a href="./recipes/pork.html">Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</a>
-    <a href="./recipes/asada.html">Carne Asada</a>
+    <ul>
+        <li><a href="./recipes/Stroganoff.html">Beef Stroganoff</a></li>
+        <li><a href="./recipes/pork.html">Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</a></li>
+        <li><a href="./recipes/asada.html">Carne Asada</a></li>
+    </ul>
 </body>
 </html>
