--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/Stroganoff.html">Beef Stroganoff</a></li>
+        <li><a href="./recipes/stroganoff.html">Beef Stroganoff</a></li>
         <li><a href="./recipes/pork.html">Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</a></li>
         <li><a href="./recipes/asada.html">Carne Asada</a></li>
     </ul>
