--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/chef.jpg">
     <ul>
         <li><a href="./recipes/stroganoff.html">Beef Stroganoff</a></li>
         <li><a href="./recipes/pork.html">Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</a></li>
