--- a/recipes/pork.html
+++ b/recipes/pork.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</h1>
