Add chef paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>Here's a silly chef dude!</p>
     <img src="images/chef.jpg">
     <ul>
         <li><a href="./recipes/stroganoff.html">Beef Stroganoff</a></li>
