Create flex container for responsiveness

--- a/recipes/asada.html
+++ b/recipes/asada.html
@@ -8,36 +8,38 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Carne Asada</h1>
-    <img src="../images/asada.jpg">
-    <h3>Description</h3>
-    <p>Marinated Carne Asada that's grilled alongside charred tortaillas and vegetables.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>3 Tbsp of Soy Sauce</li>
-        <li>2 Tbsp of Distilled White Vinegar</li>
-        <li>2 Tbsp of Lime Juice</li>
-        <li>2 Tbsp of Olive Oil</li>
-        <li>1/2 cup of Cilantro</li>
-        <li>2 Cloves of Garlic</li>
-        <li>1/4 of a Jalapeno</li>
-        <li>Pinch of Salt</li>
-        <li>1/2 tsp of Ground Cumin</li>
-        <li>1/2 tsp of Oregano</li>
-        <li>1-1/4 lb of skirt steak or flank</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Add the cilantro, jalapeno and garlic into a small food processor and pulse until really finely chopped.</li>
-        <li>In a medium size bowl, add all the remaining ingredients for the marinade along with the chopped cilantro 
-            mixture, stir well and then add the steak into the marinade, making sure it’s well coated and covered by 
-            the marinade, cover and pop in the fridge for a minimum of 4 hours.</li>
-        <li>Allow the steak to come to room temperature for about 15 minutes before cooking, meanwhile get your grill 
-            nice and hot.</li>
-        <li>Shake off any excess marinade and grill the steak for a few minutes on each side or until you’ve reached 
-            your desired temperature. Grill some peppers, onions and jalapeno alongside the steak and char some 
-            tortillas as well.</li>
-        <li>Round out the platter with some avocado and fresh cilantro and lime all over the whole thing and dig in!</li>
-    </ol>
+    <div class="container">
+        <h1>Carne Asada</h1>
+        <img src="../images/asada.jpg">
+        <h3>Description</h3>
+        <p>Marinated Carne Asada that's grilled alongside charred tortaillas and vegetables.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 Tbsp of Soy Sauce</li>
+            <li>2 Tbsp of Distilled White Vinegar</li>
+            <li>2 Tbsp of Lime Juice</li>
+            <li>2 Tbsp of Olive Oil</li>
+            <li>1/2 cup of Cilantro</li>
+            <li>2 Cloves of Garlic</li>
+            <li>1/4 of a Jalapeno</li>
+            <li>Pinch of Salt</li>
+            <li>1/2 tsp of Ground Cumin</li>
+            <li>1/2 tsp of Oregano</li>
+            <li>1-1/4 lb of skirt steak or flank</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Add the cilantro, jalapeno and garlic into a small food processor and pulse until really finely chopped.</li>
+            <li>In a medium size bowl, add all the remaining ingredients for the marinade along with the chopped cilantro
+                mixture, stir well and then add the steak into the marinade, making sure it’s well coated and covered by
+                the marinade, cover and pop in the fridge for a minimum of 4 hours.</li>
+            <li>Allow the steak to come to room temperature for about 15 minutes before cooking, meanwhile get your grill
+                nice and hot.</li>
+            <li>Shake off any excess marinade and grill the steak for a few minutes on each side or until you’ve reached
+                your desired temperature. Grill some peppers, onions and jalapeno alongside the steak and char some
+                tortillas as well.</li>
+            <li>Round out the platter with some avocado and fresh cilantro and lime all over the whole thing and dig in!</li>
+        </ol>
+    </div>
 </body>
 </html>
