--- a/recipes/stroganoff.html
+++ b/recipes/stroganoff.html
@@ -8,39 +8,41 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>Beef Stroganoff</h1>
-    <img src="../images/stroganoff.jpg">
-    <h3>Description</h3>
-    <p>Laura Vitale's yummy Beef Stroganoff recipe using white wine, cremini mushrooms, and beef sirloin!</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1-1/2 lb of Beef Sirloin, trimmed of any fat and thinly sliced</li>
-        <li>8oz of Cremini Mushrooms, sliced</li>
-        <li>1 Small Yellow or Red Onion, thinly sliced</li>
-        <li>1/4 cup of White Wine</li>
-        <li>1-1/2 Tbsp of All Purpose Flour</li>
-        <li>1 cup of Beef Stock</li>
-        <li>1 tsp of Worcestershire Sauce</li>
-        <li>1/2 cup of Sour Cream</li>
-        <li>1-1/2 Tbsp of Vegetable Oil</li>
-        <li>2 Tbsp of Unsalted Butter</li>
-        <li>1 Tbsp of Chopped Chives</li>
-        <li>1 Tbsp of Chopped Parsley</li>
-        <li>Salt and Pepper, to taste</li>
-        <li>Cooked Egg Noodles for Serving</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>In a large skillet, add the oil and allow it to get nice and hot over high heat, add half of the steak, 
-            season with salt and pepper and cook for 1 minute (30 seconds on each side), remove to a plate and set 
-            aside. Repeat with the remaining steak.</li>
-        <li>Add the butter to the same skillet allow it to melt, add the onions and mushrooms, season with a pinch 
-            of salt and saute for about 5 minutes.</li>
-        <li>Sprinkle the flour over the mushrooms and cook for one minute, add the wine, cook for about 30 seconds. 
-            Add the stock, reduce the heat to medium low and allow it to simmer for about 15 minutes.</li>
-        <li>Add the sour cream and cooked beef (along with any juices that collected in the bottom of the plate) and 
-            cook for just a minute or two or until the mixture comes to a light simmer.</li>
-        <li>Remove from the heat, stir in the chives and parsley and serve over buttered egg noodles.</li>
-    </ol>
+    <div class="container">
+        <h1>Beef Stroganoff</h1>
+        <img src="../images/stroganoff.jpg">
+        <h3>Description</h3>
+        <p>Laura Vitale's yummy Beef Stroganoff recipe using white wine, cremini mushrooms, and beef sirloin!</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1-1/2 lb of Beef Sirloin, trimmed of any fat and thinly sliced</li>
+            <li>8oz of Cremini Mushrooms, sliced</li>
+            <li>1 Small Yellow or Red Onion, thinly sliced</li>
+            <li>1/4 cup of White Wine</li>
+            <li>1-1/2 Tbsp of All Purpose Flour</li>
+            <li>1 cup of Beef Stock</li>
+            <li>1 tsp of Worcestershire Sauce</li>
+            <li>1/2 cup of Sour Cream</li>
+            <li>1-1/2 Tbsp of Vegetable Oil</li>
+            <li>2 Tbsp of Unsalted Butter</li>
+            <li>1 Tbsp of Chopped Chives</li>
+            <li>1 Tbsp of Chopped Parsley</li>
+            <li>Salt and Pepper, to taste</li>
+            <li>Cooked Egg Noodles for Serving</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>In a large skillet, add the oil and allow it to get nice and hot over high heat, add half of the steak,
+                season with salt and pepper and cook for 1 minute (30 seconds on each side), remove to a plate and set
+                aside. Repeat with the remaining steak.</li>
+            <li>Add the butter to the same skillet allow it to melt, add the onions and mushrooms, season with a pinch
+                of salt and saute for about 5 minutes.</li>
+            <li>Sprinkle the flour over the mushrooms and cook for one minute, add the wine, cook for about 30 seconds.
+                Add the stock, reduce the heat to medium low and allow it to simmer for about 15 minutes.</li>
+            <li>Add the sour cream and cooked beef (along with any juices that collected in the bottom of the plate) and
+                cook for just a minute or two or until the mixture comes to a light simmer.</li>
+            <li>Remove from the heat, stir in the chives and parsley and serve over buttered egg noodles.</li>
+        </ol>
+    </div>
 </body>
 </html>
