--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <img src="images/chef.jpg">
-    <ul>
-        <li><a href="./recipes/stroganoff.html">Beef Stroganoff</a></li>
-        <li><a href="./recipes/pork.html">Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</a></li>
-        <li><a href="./recipes/asada.html">Carne Asada</a></li>
-    </ul>
+<div class="container">
+    <body>
+        <h1>Odin Recipes</h1>
+        <img src="images/chef.jpg">
+        <ul>
+            <li><a href="./recipes/stroganoff.html">Beef Stroganoff</a></li>
+            <li><a href="./recipes/pork.html">Balsamic Rosemary Pork Tenderloin with Potatoes and Pearl Onions</a></li>
+            <li><a href="./recipes/asada.html">Carne Asada</a></li>
+        </ul>
+</div>
 </body>
 </html>
